form UI changes

--- a/survey/templates/survey/about.html
+++ b/survey/templates/survey/about.html
@@ -1,17 +1,22 @@
-<div class="card">
-  {% load static %}
-  <img class="card-img-top survey-about-img" src="{% static 'img/KenyaEMR Login.JPG' %}" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">LABORATORY FOR MOLECULAR BIOLOGY CUSTOMER SATISFACTION SURVEY FORM   </h5>
-    <p class="card-text">The customer survey for KEMRI Laboratory for Molecular Biology is
-       intended to gather feedback from its customers about their experiences and
+{% load static %}
+<link rel="stylesheet" href="{% static 'design.css'%}">
+
+  <div class="about-image">
+    <image src = "{% static 'kemri_logo.jpg'%}"></image>
+  </div>
+  <div class="about-card"></br>
+  <h2>
+    KEMRI LABORATORY FOR MOLECULAR BIOLOGY CUSTOMER SATISFACTION SURVEY.
+  </h3>
+    <p>The customer survey for KEMRI Laboratory for Molecular Biology is
+      intended to gather feedback from its customers about their experiences and
         satisfaction with the laboratory's services. The survey will include
-         questions about the quality of service, the timeliness of results, 
-         the accuracy of tests, the professionalism of staff, and the overall 
-         experience of working with the laboratory. The survey will also seek 
-         suggestions for improvement and areas where the laboratory can enhance its services. 
-         The data collected from the survey will be used to identify areas of
+        questions about the quality of service, the timeliness of results, 
+        the accuracy of tests, the professionalism of staff, and the overall 
+        experience of working with the laboratory. The survey will also seek 
+        suggestions for improvement and areas where the laboratory can enhance its services. 
+        The data collected from the survey will be used to identify areas of
           strength and weakness in the laboratory's operations and to develop strategies
-           to improve customer satisfaction and overall service quality.
-        </div>
-</div>
+          to improve customer satisfaction and overall service quality.
+    </p><br>
+  </div>
