--- a/survey/templates/survey/surveys.html
+++ b/survey/templates/survey/surveys.html
@@ -1,7 +1,10 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'design.css'%}">
+
 <div class="card">
   <h5 class="card-header">Available Surveys</h5>
   <div class="card-body">
-      <p class="card-text">Participate in this survey to  help us understand you better!</p>
+      <p class="card-text">Participate in any survey to  help us understand you better!</p>
       <ul>
         {% for survey in surveys %}
             <li>
@@ -9,7 +12,7 @@
                   <div class="card-body">
                     <h5 class="card-title"><a href="/survey/survey_details/{{survey.id}}">{{survey.name}}</a></h5>
                   </div>
-                </div>
+                </div></br>
             </li>
         {% endfor %}
       </ul>
