--- a/survey/templates/survey/index.html
+++ b/survey/templates/survey/index.html
@@ -14,7 +14,7 @@
 {% load static %}
 <body style="background-image: url('{% static 'img/background.jpg' %}')">
     <nav class="navbar navbar-expand-lg dark" style="background-color: #333;">
-      <a class="navbar-brand survey-navbar-link" href="#">Sample Survey Application</a>
+      <a class="navbar-brand survey-navbar-link" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,25 +44,6 @@
                     <a class="nav-link survey-navbar-link" href="/admin/">Admin Page</a>
             </li>
 
-<!--          <li class="nav-item dropdown">-->
-<!--            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--              Dropdown-->
-<!--            </a>-->
-<!--            <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--              <a class="dropdown-item" href="#">Action</a>-->
-<!--              <a class="dropdown-item" href="#">Another action</a>-->
-<!--              <div class="dropdown-divider"></div>-->
-<!--              <a class="dropdown-item" href="#">Something else here</a>-->
-<!--            </div>-->
-<!--          </li>-->
-<!--          <li class="nav-item">-->
-<!--            <a class="nav-link disabled" href="#">Disabled</a>-->
-<!--          </li>-->
-        </ul>
-<!--        <form class="form-inline my-2 my-lg-0">-->
-<!--          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
-<!--        </form>-->
       </div>
     </nav>
         {% if partial_view == 'about' %}
