--- a/survey/templates/survey/survey_details.html
+++ b/survey/templates/survey/survey_details.html
@@ -1,34 +1,40 @@
-<div class="card survey-form-card">
-  <h5 class="card-header">{{survey.name}}</h5>
-  <div class="card-body">
-      <p class="card-text">Kindly fill in the survey and submit to participate</p>
-      <form action="/survey/submit_survey/" method="post">
-      {% csrf_token %}
-      {% for question in survey.question_set.all %}
-          <fieldset class="form-group">
-            <div class="row">
-              <legend class="col-form-label col-md-6 pt-0">{{question.question_text}}</legend>
-              <div class="col-md-6">
-                {% for choice in question.choice_set.all %}
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="{{question.id}}"
-                             id="{{question.id}}{{choice.id}}" value="choice/{{choice.id}}" aria-describedby="radioHelp">
-                      <label class="form-check-label" for="{{question.id}}{{choice.id}}">
-                        {{choice.choice_text}}
-                      </label>
+{% load static %}
+<link rel="stylesheet" href="{% static 'design.css'%}">
+      <div class="card survey-form-card">
+        <h5 class="card-header">{{survey.name}}</h5></br>
+        <div class="images">
+          <image src = "{% static 'kemri_logo.jpg'%}"></image>
+        </div>
+        <div class="card-body">
+            <p class="card-text">Kindly fill in the survey and submit to participate</p>
+            <form action="/survey/submit_survey/" method="post">
+            {% csrf_token %}
+            {% for question in survey.question_set.all %}
+                <fieldset class="form-group">
+                  <div class="row">
+                    <legend class="col-form-label col-md-6 pt-0">{{question.question_text}}</legend>
+                    <div class="col-md-6">
+                      {% for choice in question.choice_set.all %}
+                          <div class="form-check">
+                            <input class="form-check-input" type="radio" name="{{question.id}}"
+                                   id="{{question.id}}{{choice.id}}" value="choice/{{choice.id}}" aria-describedby="radioHelp" required>
+                            <label class="form-check-label" for="{{question.id}}{{choice.id}}">
+                              {{choice.choice_text}}
+                            </label>
+                          </div>
+                      {% endfor %}
+                      <small id="radioHelp" class="form-text text-muted">Please select one of the available choices.</small>
                     </div>
-                {% endfor %}
-                <small id="radioHelp" class="form-text text-muted">Please select one of the available choices.</small>
+                  </div>
+                </fieldset>
+                <hr/>
+            {% endfor %}
+            <div class="form-group">
+              <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary">Submit</button>
               </div>
             </div>
-          </fieldset>
-          <hr/>
-      {% endfor %}
-      <div class="form-group row">
-        <div class="col-sm-10">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
       </div>
-    </form>
-  </div>
-</div>
+
