updates on the interface

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -49,7 +49,7 @@
             {% endblock %}
             {% block userlinks %}
                 {% if site_url %}
-                    <a href="{{ site_url }}survey">{% translate 'View site' %}</a> /
+                    <a href="{{ site_url }}about">{% translate 'View site' %}</a> /
                 {% endif %}
                 {% if user.is_active and user.is_staff %}
                     {% url 'django-admindocs-docroot' as docsroot %}
