--- a/survey/templates/survey/submit_success.html
+++ b/survey/templates/survey/submit_success.html
@@ -1,8 +1,10 @@
-<div class="card">
-  {% load static %}
-  <img class="card-img-top survey-about-img" src="{% static 'img/thank-you.jpg' %}" alt="Card image cap">
-  <div class="card-body">
-    <p class="card-text">Thank you for taking part in the survey. We whole heartedly appreciate it.</p>
-    <a href="/survey/all_surveys" class="btn btn-primary">Take Another Survey</a>
+{% load static %}
+<link rel="stylesheet" href="{% static 'thanks.css' %}">
+<div class="page-background">
+  <div class="thanks">Thank</br> you!</div>
+  <div class="thanks-text">
+    <p class="page-text">Thank you for taking part in the survey. We whole heartedly appreciate it.</p>
+    <a href="/survey/all_surveys" class="btn">Take Another Survey</a>
   </div>
 </div>
+
